Fix for #402 - Change the URL & display text for ADN share

--- a/android/libraries/TweetLanesCore/res/values-ru/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values-ru/strings.xml
@@ -178,6 +178,7 @@
 
     <string name="share_tweet">Текст твита</string>
     <string name="share_tweet_link">Ссылка на твит</string>
+    <string name="share_tweet_post">Ссылка на твит</string>
     <string name="share_link">Ссылка в твите</string>
     <string name="share_first_link">Ссылка в твите</string>
 
