Fix for #406 - Added menu option for copy text for quick way to copy status to clipboard

--- a/android/libraries/TweetLanesCore/res/values-ru/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values-ru/strings.xml
@@ -78,6 +78,7 @@
     <string name="action_block">Заблокировать пользователя</string>
     <string name="action_report_for_spam">Сообщить о спаме</string>
     <string name="action_delete_status">Удалить</string>
+    <string name="action_copy_status_text">Copy Text</string>
     <string name="action_retweet">Ретвитнуть</string>
     <string name="action_reply">Ответить</string>
     <string name="action_message">Сообщение</string>
