--- a/android/libraries/TweetLanesCore/res/values/strings.xml
+++ b/android/libraries/TweetLanesCore/res/values/strings.xml
@@ -302,16 +302,16 @@
     <string name="tutorial_thanks_title">- thank you!</string>
 
     <string name="tutorial_welcome_intro">Welcome to Tweet Lanes!</string>
-    <string name="tutorial_welcome_middle">"Tweet Lanes contains some subtle enhancements over any
-        Twitter or App.net app you've used previously.\n\nLet's very quickly run through the most
-        unique features of the app."
+    <string name="tutorial_welcome_middle">Tweet Lanes contains some subtle enhancements over any
+        Twitter or App.net app you\'ve used previously.\n\nLet's very quickly run through the most
+        unique features of the app.
     </string>
     <string name="tutorial_welcome_swipe">
         <i>« Swipe to continue</i>
     </string>
 
     <string name="tutorial_volscroll_intro">In addition to traditional touch scrolling, Tweet Lanes
-        introduces a new way to navigate your feed -<i>VolScroll™</i>.\n\nBy clicking the volume
+        introduces a new way to navigate your feed: <i>VolScroll™</i>.\n\nBy clicking the volume
         up/down hardware keys, you can quickly navigate your timeline.
     </string>
     <string name="tutorial_volscroll_reasons">This is awesome because:</string>
@@ -337,7 +337,7 @@
         Lanes, nor does a new screen load when writing an update.
     </string>
     <string name="tutorial_compose_tweet_context_sensitive">Instead, status updates are created via
-        the ever-present<i>Context Box</i>:
+        the ever-present <i>Context Box</i>:
     </string>
     <string name="tutorial_compose_tweet_hint">\nThe
         <i>Context Box</i>
